Fix #13816 | MultiSelect - Delete button is not visible on chips with long label text

--- a/src/app/components/multiselect/multiselect.css
+++ b/src/app/components/multiselect/multiselect.css
@@ -42,7 +42,12 @@
     .p-multiselect-token-icon {
         cursor: pointer;
     }
-
+    .p-multiselect-token-label {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: 100px;
+    }
     .p-multiselect-items-wrapper {
         overflow: auto;
     }
